<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/transparent"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_progress"
        android:gravity="left"
        android:elevation="4dp"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/label_about"
                android:textColor="@color/txt_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:textColor="@color/txt_color"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="10dp"
                android:text="@string/about_us1"
                android:textColor="@color/txt_color"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:maxLines="50"
                android:text="@string/about_us2"
                android:textColor="@color/txt_color"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:maxLines="50"
                android:text="@string/about_us3"
                android:textColor="@color/txt_color"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="465dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp" >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_closedialog"
                android:layout_width="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_buttons"
                android:text="Close"
                android:textColor="@color/white" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>