<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="horizontal"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/layout_hoder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/log_in_page_text_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:paddingTop="10dp" >

            <ImageView
                android:id="@+id/flipic_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:src="@drawable/top_bar_logo" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/textUserName"
                    style="@style/EditTextAppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/edit_hint_userid"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:textColor="@color/txt_color"
                    android:textColorHint="@color/txt_color"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="21dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/textPassword"
                    style="@style/EditTextAppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/edit_hint_password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:textColor="@color/txt_color"
                    android:textColorHint="@color/txt_color"
                    android:textSize="14sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="39dp"
                android:background="@drawable/rounded_buttons"
                android:gravity="center"
                android:text="Login"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_forgetPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_buttons"
                android:gravity="center"
                android:text="@string/label_forget_pass"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txt_not_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Don&apos;t have an account? "
                    android:textColor="@color/txt_color"
                    android:textSize="14sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_buttons"
                android:gravity="center"
                android:text="Register"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>