<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/rounded_corner_with_gray_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layout_image_info_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:clipToPadding="true"
        android:elevation="2dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/layout_image_info_holder1"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="20dp" >

            <ImageView
                android:id="@+id/item_view"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitCenter"
                android:src="@drawable/green_course" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_image_info_holder2"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:paddingBottom="5dp"
                android:paddingStart="8dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:textColor="@color/txt_dark_title"
                android:textSize="14sp"
                android:visibility="visible"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/txt_auther"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:lines="2"
                android:paddingBottom="10dp"
                android:paddingTop="5dp"
                android:textColor="@color/txt_black"
                android:textSize="14sp"
                android:visibility="visible" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/item_download"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rounded_buttons"
                android:gravity="center"
                android:text="@string/download_text"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/up_View"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rounded_buttons"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/view_text"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/viewup_layout"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="center_vertical|center_horizontal"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:orientation="horizontal"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/small_view"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:padding="5dp"
                    android:layout_marginEnd="3dp"
                    android:background="@drawable/rounded_buttons"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/view_text"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/Update"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:padding="5dp"
                    android:layout_marginStart="3dp"
                    android:background="@drawable/rounded_buttons"
                    android:gravity="center"
                    android:text="@string/update_text"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>