<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/white"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/holder_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/white" >

            <LinearLayout
                android:id="@+id/layout_back"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:visibility="visible" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/back_aero_color" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/top_bar_logo" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/divider" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="Register"
                android:textColor="@color/txt_color"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/linearLayout_holder1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="27dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="6dp"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" >

                        <EditText
                            android:id="@+id/txt_first_name"
                            style="@style/EditTextAppTheme"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/hint_first_name"
                            android:paddingLeft="10dp"
                            android:singleLine="true"
                            android:textColor="@color/txt_color"
                            android:textColorHint="@color/txt_color"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="6dp"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" >

                        <EditText
                            android:id="@+id/txt_last_name"
                            style="@style/EditTextAppTheme"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/hint_last_name"
                            android:paddingLeft="10dp"
                            android:singleLine="true"
                            android:textColor="@color/txt_color"
                            android:textColorHint="@color/txt_color"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="6dp"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" >

                        <EditText
                            android:id="@+id/txt_email_address"
                            style="@style/EditTextAppTheme"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"
                            android:paddingLeft="10dp"
                            android:singleLine="true"
                            android:textColor="@color/txt_color"
                            android:textColorHint="@color/txt_color"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="6dp"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" >

                        <EditText
                            android:id="@+id/txt_password"
                            style="@style/EditTextAppTheme"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword"
                            android:paddingLeft="10dp"
                            android:singleLine="true"
                            android:textColor="@color/txt_color"
                            android:textColorHint="@color/txt_color"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="6dp"
                        android:background="@color/white"
                        android:gravity="center_vertical"
                        android:orientation="horizontal" >

                        <EditText
                            android:id="@+id/txt_confirm_password"
                            style="@style/EditTextAppTheme"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/hint_confirm_password"
                            android:inputType="textPassword"
                            android:paddingLeft="10dp"
                            android:singleLine="true"
                            android:textColor="@color/txt_color"
                            android:textColorHint="@color/txt_color"
                            android:textSize="16sp" />
                    </LinearLayout>

<!--                     <LinearLayout -->
<!--                         android:layout_width="match_parent" -->
<!--                         android:layout_height="40dp" -->
<!--                         android:layout_marginBottom="6dp" -->
<!--                         android:background="@color/white" -->
<!--                         android:gravity="center_vertical" -->
<!--                         android:orientation="horizontal" > -->

<!--                         <EditText -->
<!--                             android:id="@+id/txt_mobile_no" -->
<!--                             style="@style/EditTextAppTheme" -->
<!--                             android:layout_width="match_parent" -->
<!--                             android:layout_height="match_parent" -->
<!--                             android:digits="0123456789" -->
<!--                             android:hint="@string/hint_mobile" -->
<!--                             android:inputType="phone" -->
<!--                             android:maxLength="10" -->
<!--                             android:paddingLeft="10dp" -->
<!--                             android:singleLine="true" -->
<!--                             android:textColor="@color/txt_color" -->
<!--                             android:textColorHint="@color/txt_color" -->
<!--                             android:textSize="16sp" /> -->
<!--                     </LinearLayout> -->
                </LinearLayout>

                <Button
                    android:id="@+id/btn_Register"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rounded_buttons"
                    android:gravity="center"
                    android:text="Register"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>